# familiar

./: CLAUDE.md  LICENSE  README.md  dispatcher.py  pyproject.toml  setup.sh
src/familiar/: __init__.py  __main__.py  cli.py  config.py  dispatcher.py  watcher.py
