[project]
name = "familiar"
version = "0.2.0"
description = "File-based task runner for Obsidian using Claude Code CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.scripts]
familiar = "familiar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/familiar"]
